src/objects/Opportunity_Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Guidance__c</fullName>
        <formula>IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;Info Icon&quot;) &amp; &quot; Please complete the proposal by specifying the SharePoint URL where the file is stored and/or uploading the file directly below.&quot;</formula>
        <label>Guidance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Proposal_Action__c</fullName>
        <formula>IF(
   ISBLANK(Sharepoint_url__c),
   HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;),
   HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;) &amp; &quot; | &quot; &amp;  
   HYPERLINK(&quot;&quot; &amp; Sharepoint_url__c,
      &quot;View on SharePoint&quot;,
      &quot;_Self&quot;)
  )</formula>
        <label>Proposal Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharepoint_url__c</fullName>
        <label>Sharepoint URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Select the type of document you&apos;ll be attaching to this opportunity.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proposal</fullName>
                    <default>true</default>
                    <label>Proposal</label>
                </value>
                <value>
                    <fullName>JEP</fullName>
                </value>
                <value>
                    <fullName>SSO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Proposal</label>
    <nameField>
        <displayFormat>PRO-{000000}</displayFormat>
        <label>Proposal</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>